Typing animation broke on mobile device attempting to fix

--- a/src/App.css
+++ b/src/App.css
@@ -250,7 +250,7 @@ li {
   border-right: 0.15em solid var(--text-color);
   white-space: nowrap; /* Keeps the content on a single line */
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-  letter-spacing: 0.1em;
+  /* letter-spacing: 1em; */
   animation: typing 1.5s steps(32), blink-caret 0.75s step-end infinite;
   animation-fill-mode: forwards;
 }
